--- a/index.html
+++ b/index.html
@@ -4,10 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://github.com/Potatosil/potatosil.github.io/blob/main/main.css">
-    <title>Potatosil</title>
+    <title>CollabWeb</title>
 </head>
 <body>
-    <h1>Potatosil Home Page</h1>
+    <nav>
+        <ul>
+            <li>Home</li>
+            <li>Contact</li>
+            <li>About</li>
+        </ul>
+        <h1>CollabWeb</h1>
+    </nav>   
 </body>
 </html>
