--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="main.css">
     <script src="main.js"></script>
-    <title>CollabWeb</title>
+    <title>CollabWebA</title>
 </head>
 <body>
     <nav>
