--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <link rel="stylesheet" href="main.css">
     <script src="main.js"></script>
     <title>CollabWebA</title>
+    <div id="particles-js"></div>
+
+<!-- stats - count particles -->
+<div class="count-particles">
+  <span class="js-count-particles">--</span> particles
+</div>
 </head>
 <body>
     <nav>
