--- a/index.html
+++ b/index.html
@@ -6,17 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="main.css">
     <script src="main.js"></script>
-    <title>CollabWebA</title>
+    <title>CollabWeb</title>
    
 
 
 </head>
 <body>
-    <div id="particles-js"></div>
 
-    <div class="count-particles">
-        <span class="js-count-particles">--</span> particles
-      </div>
     <nav>
         <ul>
             <li>Home</li>
@@ -25,5 +21,6 @@
         </ul>
         <h1>CollabWeb</h1>
     </nav>   
+    <input type="text" id="name" placeholder="name here">
 </body>
 </html>
