--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="main.css">
     <script src="main.js"></script>
+    <script type="text/javascript" src="particles.min.js"></script>
+    <script type="text/javascript" src="app.js"></script>
     <title>CollabWeb</title>
    
 
-
 </head>
 <body>
-
+    <div id="particles-js"></div>
     <nav>
         <ul>
             <li>Home</li>
@@ -22,5 +23,6 @@
         <h1>CollabWeb</h1>
     </nav>   
     <input type="text" id="name" placeholder="name here">
-</body>
+    <input type="submit" name="" value="Submit" onclick="alert()">
+</body> 
 </html>
