--- a/index.html
+++ b/index.html
@@ -5,7 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="main.css">
-    <script src="main.js"></script>
+    <script>
+    function alert() {
+        var name = document.getElementById("buton").value;
+    
+        alert(name + "has joined the game");
+    }
+    </script>
     <title>CollabWeb</title>
    
 
@@ -20,7 +26,7 @@
         </ul>
         <h1>CollabWeb</h1>
     </nav>   
-    <input type="text" id="name" placeholder="name here">
+    <input type="text" id="buton" placeholder="name here">
     <input type="submit" name="" value="Submit" onclick="alert()">
  
 </body> 
